# CrustBrowser

./: Cargo.toml  install.bat  install.sh  readme.md  update.bat
CLI/: index.js  package.json
src/: main.rs  network.rs  parsar.rs  render.rs  search.rs  utilts.rs
