[package]
name = "crust-browser"
version = "0.1.0"
edition = "2021"
description = "A simple text-based web browser written in Rust"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
scraper = "0.22"
url = "2"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
